# AItap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKTREES.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scanner_false_positive.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  index.md  profiles-design.md  quickstart.md  release-checklist.md  scanner-cross-file-orchestration-design.md  scanner-templates-design.md  scanner-wrappers-design.md  settings-ui-design.md  wave-4-design.md  wave-5-design.md
docs/rules/: index.md
examples/starter/: README.md  main.py
examples/starter/starter_app/: __init__.py  anthropic_critic.py  mocks.py  openai_summarizer.py
src/aitap/: __init__.py  __main__.py  cli.py  config.py  config_io.py  profile_presets.py  secrets.py
src/aitap/audit/: clone.py
src/aitap/dataset/: __init__.py  code_context.py  fixture_miner.py  llm_expander.py  seed.py  types.py
src/aitap/deep/: anthropic_client.py  client.py  cross_file_resolver.py  factory.py  openai_client.py  orchestrator.py  pricing.py  purpose_inferer.py  testing.py  wrapper_detector.py
src/aitap/deep/prompts/: case_expander.md  cross_file_resolve.md  purpose_infer.md  wrapper_detect.md
src/aitap/images/: __init__.py  client.py  factory.py  mock_client.py  openai_client.py  pricing.py
src/aitap/iterate/: __init__.py  critic.py  impact.py  judge.py  judge_defaults.py  judge_models.py  loop.py
src/aitap/iterate/prompts/: critic.md  judge.md
src/aitap/playground/: dispatch.py  pipeline_runner.py  runner.py
src/aitap/scanner/: __init__.py  engine.py  models.py  report.py
src/aitap/scanner/dataflow/: __init__.py  base.py  cross_file_orchestration.py  intra_class_method_chain.py  intra_file_chain.py  langchain_pipe.py  llamaindex_engine.py  variable_tracker.py
src/aitap/scanner/languages/: python.py
src/aitap/scanner/rules/: cross_call_resolution.py  env_inspector.py  prompt_extractor.py  sdk_calls.py  template_definitions.py  wrapper_calls.py
src/aitap/server/: app.py  deps.py
src/aitap/server/routes/: __init__.py  _deps.py  history.py  iterate.py  pipelines.py  profile_presets.py  profiles.py  prompts.py  runs.py  settings.py
src/aitap/store/: __init__.py  db.py  files.py  git_link.py  history.py  iterations.py  runs.py
src/aitap/ui/: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src/aitap/ui/src/: index.css  main.tsx  (+2 more)
tests/: conftest.py
tests/fixtures/anthropic_agent/: agent.py  config.yaml
tests/fixtures/langchain_rag/: rag.py
tests/fixtures/openai_basic/: .env.example  followup.py  summarize.py
tests/fixtures/var_chain/: workflow.py
tests/fixtures/wrapped_llm/: custom_wrapper.py
tests/integration/: test_api_iterate.py  test_api_prompts.py  test_api_runs.py  test_audit_real_clone.py  test_profiles_e2e.py  test_secure_settings_e2e.py  test_starter_example.py  test_store_persist.py
tests/unit/: test_anthropic_client.py  test_anthropic_client_base_url.py  test_anthropic_factory_env_base_url.py  test_audit_clone.py  test_cli.py  test_config_io.py  test_critic.py  test_dataflow_cross_file_orchestration.py  test_dataflow_detectors.py  test_dataflow_intra_class_method_chain.py  test_dataflow_orchestrator.py  test_dataset_code_context.py  test_dataset_fixture_miner.py  test_dataset_llm_expander.py  test_dataset_orchestrator.py  test_dataset_seed.py  test_dataset_types.py  test_deep_enrichers.py  test_deep_factory.py  test_deep_orchestrator.py  test_dispatch.py  test_dispatch_sidecar.py  test_doc_currency.py  test_engine.py  test_env_inspector.py  test_image_client.py  test_image_factory.py  test_image_pricing.py  test_impact.py  test_iterations_store.py  test_judge.py  test_loop.py  test_mock_image_client.py  test_openai_client.py  test_openai_compat_client.py  test_openai_image_client.py  test_pipeline_runner.py  test_playground_runner.py  test_pricing.py  test_profile_presets.py  (+23 more)
(+60 files in other folders)
